--- a/requirements.txt
+++ b/requirements.txt
@@ -1,81 +1,29 @@
-altgraph==0.10.2
-asn1crypto==0.23.0
-astroid==1.5.3
-backports-abc==0.5
-backports.functools-lru-cache==1.4
-bdist-mpkg==0.5.0
-bonjour-py==0.3
-certifi==2017.7.27.1
-cffi==1.11.0
+beautifulsoup4==4.6.0
+certifi==2017.11.5
 chardet==3.0.4
-configparser==3.5.0
-cryptography==2.0.3
-Django==1.11.5
-enum34==1.1.6
-git-review==1.25.0
+dateparser==0.6.0
+Django==2.0b1
+gunicorn==19.7.1
+html5lib==0.999999999
+humanize==0.5.1
 idna==2.6
-ipaddress==1.0.18
-isort==4.2.15
-lazy-object-proxy==1.3.1
-lxml==4.0.0
-macholib==1.5.1
-matplotlib==1.3.1
-mccabe==0.6.1
-modulegraph==0.10.4
-numpy==1.8.0rc1
-pdfkit==0.6.1
-powerline-status==2.6
-py2app==0.7.3
-pyasn1==0.3.6
-pycparser==2.18
-pylint==1.7.4
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
-pyOpenSSL==17.3.0
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
+Markdown==2.6.9
+markdown2==2.3.4
+maya==0.3.3
+olefile==0.44
+pendulum==1.3.1
+Pillow==4.3.0
+ply==3.4
+Pygments==2.2.0
+python-dateutil==2.6.1
+pytz==2017.2
+pytzdata==2017.3
+regex==2017.9.23
 requests==2.18.4
-rsa==3.4.2
-scipy==0.13.0b1
-singledispatch==3.4.0.3
+ruamel.yaml==0.15.34
 six==1.11.0
-tornado==4.5.2
+slimit==0.8.1
+tinycss2==0.6.1
+tzlocal==1.4
 urllib3==1.22
-vboxapi==1.0
-wrapt==1.10.11
-xattr==0.6.4
-zope.interface==4.1.1
+webencodings==0.5.1
