--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ beautifulsoup4==4.6.0
 certifi==2017.11.5
 chardet==3.0.4
 dateparser==0.6.0
-Django==2.0b1
+Django==2.0
 gunicorn==19.7.1
 html5lib==0.999999999
 humanize==0.5.1
