--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+amqp==2.2.2
 beautifulsoup4==4.6.0
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2017.11.5
 chardet==3.0.4
 dateparser==0.6.0
@@ -7,6 +10,7 @@ gunicorn==19.7.1
 html5lib==0.999999999
 humanize==0.5.1
 idna==2.6
+kombu==4.1.0
 Markdown==2.6.9
 markdown2==2.3.4
 maya==0.3.3
@@ -26,4 +30,5 @@ slimit==0.8.1
 tinycss2==0.6.1
 tzlocal==1.4
 urllib3==1.22
+vine==1.1.4
 webencodings==0.5.1
