--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2017.11.5
 chardet==3.0.4
 dateparser==0.6.0
 Django==2.0
+django-celery-results==1.0.1
 gunicorn==19.7.1
 html5lib==0.999999999
 humanize==0.5.1
