--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,13 @@ gunicorn==19.7.1
 idna==2.6
 kombu==4.1.0
 markdown2==2.3.5
+pendulum==1.3.2
 Pygments==2.2.0
+python-dateutil==2.6.1
 pytz==2017.3
+pytzdata==2017.3.1
 requests==2.18.4
+six==1.11.0
+tzlocal==1.5.1
 urllib3==1.22
 vine==1.1.4
