Basic giant bomb data fetching

--- a/thingsimade/keys_ex.ini
+++ b/thingsimade/keys_ex.ini
@@ -6,6 +6,7 @@ user = lovetoeat@hotdogs.com
 
 [keys]
 django = keepthiskeyabigsecretfromtheworld!
+giantbomb = areallylongkeyfromgiantbombdotcom
 lastfm = 1234asdf
 recaptcha_public = 2345sdfg
 recaptcha_private = 3456dfgh
