--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ CommonMark==0.7.4
 commonmarkextensions==0.0.2
 dateparser==0.6.0
 Django==2.0
+django-jet==1.0.6
 future==0.16.0
 gunicorn==19.7.1
 humanize==0.5.1
@@ -15,9 +16,11 @@ kombu==4.1.0
 maya==0.3.3
 pendulum==1.3.2
 Pillow==5.0.0
+psycopg2==2.7.3.2
 python-dateutil==2.6.1
 pytz==2017.3
 pytzdata==2017.3.1
+raven==6.4.0
 regex==2017.12.12
 requests==2.18.4
 ruamel.yaml==0.15.35
