--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 click==6.7
+Cython==0.27.3
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+mistune==0.8.3
+mistune-contrib==0.1
 Werkzeug==0.14.1
