--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,21 @@
+bottlenose==1.1.7
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
 Cython==0.27.3
 Flask==0.12.2
+httplib2==0.10.3
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
+lxml==4.1.1
 MarkupSafe==1.0
 mistune==0.8.3
 mistune-contrib==0.1
+python-dateutil==2.6.1
+pytvdbapi==0.5.0
+requests==2.18.4
+requests-cache==0.4.13
+six==1.11.0
+urllib3==1.22
 Werkzeug==0.14.1
