--- a/stats/requirements.txt
+++ b/stats/requirements.txt
@@ -1,8 +1,14 @@
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2018.1.18
 chardet==3.0.4
 CouchDB==1.1
 httplib2==0.10.3
 idna==2.6
+kombu==4.1.0
 pytvdbapi==0.5.0
+pytz==2017.3
 requests==2.18.4
 urllib3==1.22
+vine==1.1.4
