Docker is being a shit and picking up the master branch so merging to unheck it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
 version: '3'
 services:
-  web:
-    container_name: 'site'
-    build: ./site
-    ports:
-     - "5000:5000"
+    web:
+        build: site/.
+        ports:
+            - "5000:5000"
+
+    worker:
+        build: worker/.
+    
+    rabbitmq:
+        image: rabbitmq
+
+    couchdb:
+        image: couchdb
