--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
     web:
+        container_name: site
         build: site/.
         ports:
             - "5000:5000"
@@ -8,6 +9,7 @@ services:
             - "couchdb"
 
     worker:
+        container_name: worker
         build: worker/.
         command: celery -A tasks worker --beat --loglevel=info
         depends_on:
