--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -1,10 +1,22 @@
 click==6.7
 CouchDB==1.1
+dateparser==0.6.0
 Flask==0.12.2
+humanize==0.5.1
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+maya==0.3.3
 mistune==0.8.3
 mistune-contrib==0.1
+pendulum==1.4.1
+Pygments==2.2.0
 PyRSS2Gen==1.1
+python-dateutil==2.6.1
+pytz==2017.3
+pytzdata==2018.3
+regex==2018.2.3
+ruamel.yaml==0.15.35
+six==1.11.0
+tzlocal==1.5.1
 Werkzeug==0.14.1
