--- a/site/static/manifest.json
+++ b/site/static/manifest.json
@@ -2,8 +2,8 @@
     "name": "Things I Made",
     "short_name": "TIM",
     "start_url": "/",
-    "theme_color": "#82cbb0",
-    "background_color": "#FFFFFF",
+    "theme_color": "#f92672",
+    "background_color": "#ffffff",
     "display": "fullscreen",
     "orientation": "portrait"
 }
