--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
+certifi==2018.1.18
+chardet==3.0.4
 django==2.0.3
+httplib2==0.11.3
+idna==2.6
+kombu==4.1.0
 mistune-contrib==0.1
 mistune==0.8.3
 pygments==2.2.0
+pytvdbapi==0.5.0
 pytz==2018.3
+requests==2.18.4
+urllib3==1.22
+vine==1.1.4
