--- a/site/Pipfile
+++ b/site/Pipfile
@@ -11,6 +11,8 @@ mistune-contrib = "*"
 requests = "*"
 pytvdbapi = "*"
 celery = "*"
+gunicorn = "*"
+"psycopg2-binary" = "*"
 
 [dev-packages]
 pylint = "*"
