--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -4,11 +4,13 @@ celery==4.1.0
 certifi==2018.1.18
 chardet==3.0.4
 django==2.0.3
+gunicorn==19.7.1
 httplib2==0.11.3
 idna==2.6
 kombu==4.1.0
 mistune-contrib==0.1
 mistune==0.8.3
+psycopg2-binary==2.7.4
 pygments==2.2.0
 pytvdbapi==0.5.0
 pytz==2018.3
