--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,16 @@ services:
     depends_on:
       - db
 
+  worker:
+    build: ./site
+    command: ./run_celery.sh
+    volumes:
+      - .:/app
+    links:
+      - db
+      - rabbitmq
+    depends_on:
+      - rabbitmq
 
   db:
     image: postgres:latest
@@ -27,11 +37,8 @@ services:
       - "5432:5432"
   
   rabbitmq:
-    hostname: rabbit
+    hostname: rabbitmq
     image: rabbitmq:latest
-    environment:
-      - RABBITMQ_DEFAULT_USER=admin
-      - RABBITMQ_DEFAULT_PASS=mypass
     ports:
       - "4369:4369"
       - "5671:5671"
