--- a/site/thingsimade/ex_keys.ini
+++ b/site/thingsimade/ex_keys.ini
@@ -6,10 +6,9 @@ user = lovetoeat@hotdogs.com
 
 [keys]
 django = keepthiskeyabigsecretfromtheworld!
-giantbomb = areallylongkeyfromgiantbombdotcom
+goodreads = booksbooks
+goodreads_id = 123booklover
 lastfm = 1234asdf
-recaptcha_public = 2345sdfg
-recaptcha_private = 3456dfgh
-steam = 4657fghj
 tmdb = 5678ghjk
 trakt = 6789hjkl
+tvdb = 7890jkla
