--- a/site/requirements.txt
+++ b/site/requirements.txt
@@ -1,9 +1,10 @@
 amqp==2.2.2
+beautifulsoup4==4.6.0
 billiard==3.5.0.3
 celery==4.1.0
 certifi==2018.1.18
 chardet==3.0.4
-django==2.0.3
+django==2.0.4
 gunicorn==19.7.1
 httplib2==0.11.3
 idna==2.6
