--- a/production.yml
+++ b/production.yml
@@ -34,6 +34,8 @@ services:
     restart: always
     image: postgres:latest
     hostname: db
+    volumes:
+      - ./data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
