--- a/site/thingsimade/ex_keys.ini
+++ b/site/thingsimade/ex_keys.ini
@@ -6,9 +6,12 @@ user = lovetoeat@hotdogs.com
 
 [keys]
 django = keepthiskeyabigsecretfromtheworld!
+giantbomb = ienjoyvideogames
 goodreads = booksbooks
 goodreads_id = 123booklover
+hltb_username = gameplayer999
 lastfm = 1234asdf
+steam = gamer1234
 tmdb = 5678ghjk
 trakt = 6789hjkl
 tvdb = 7890jkla
